# hashcode2020

./: .gitignore  .python-version  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/solutions/: a.0.0446c33b-75ca-417f-9520-f55c31b34885.solution  b.0.841b826b-c5d9-41f6-abe7-cc6c281aa647.solution  c.c31e5e4d-1709-459f-a03d-68942d496b35.solution  d.3d725b97-fdf9-4a83-8172-509c0efff43b.solution  e.21f3671e-8cfd-4b1e-a335-80293229bf39.solution  f.8f0116e7-9470-4560-b54c-5f64892fb1e7.solution
notebooks/: sample.ipynb
src/: __init__.py  book.py  library.py  main.py  problem.py  scorer.py  solution.py
src/solvers/: __init__.py  greedy_solver.py  random_solver.py  raw_potential_solver.py  solver.py
